--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "firebase": "^5.8.3",
+    "ionic-img-viewer": "^2.9.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -77,7 +78,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "com-sarriaroman-photoviewer": {}
     },
     "platforms": [
       "android"
